# SyElectro-Example

./: README.md
client/: ClientManager.cpp  ClientManager.h  Command.h  Command_MakeCommand.cpp  Command_RemoveObject.h  Command_RemoveWire.cpp  Command_RemoveWire.h  Command_SetObject.cpp  Command_SetObject.h  Command_Switch.cpp  ConnectingViewer.cpp  ConnectingViewer.h  EasyViewer.h  Main.cpp  Node.h  Object.h  Object_Battery.cpp  Object_Battery.h  Object_Light.cpp  Object_Light.h  Object_Relay.cpp  Object_Relay.h  Object_Switch.cpp  Object_Switch.h  TitleViewer.cpp  TitleViewer.h  Wire.h  World.cpp  World.h  WorldViewer.cpp  WorldViewer.h  client.sln  client.vcxproj  client.vcxproj.filters  stdafx.h
server/App/: CMakeLists.txt  Command.h  Command_MoveObject.cpp  Command_MoveObject.h  Command_RemoveObject.cpp  Command_SetWire.cpp  Command_SetWire.h  Command_Switch.h  Main.cpp  Node.cpp  Node.h  Object.h  Object_Battery.h  Object_Light.cpp  Object_Light.h  Object_MakeObject.cpp  Object_Relay.cpp  Object_Relay.h  Object_Switch.h  Wire.cpp  Wire.h  World.cpp  World.h  stdafx.h
